// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: Azure DevOps 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      key
    </h3>
  </div>
  <i
    className="spinner spacer-right"
  />
  settings.almintegration.checking_configuration
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      key
    </h3>
    <span>
      http://github.enterprise.com
    </span>
  </div>
  <i
    className="spinner spacer-right"
  />
  settings.almintegration.checking_configuration
</div>
`;

exports[`should render correctly: error 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      key
    </h3>
    <span>
      http://github.enterprise.com
    </span>
  </div>
  <div
    className="display-flex-row spacer-bottom"
  >
    <div
      className="huge-spacer-right"
    >
      <Tooltip
        overlay="settings.almintegration.feature.status_reporting.description_pr_and_commits"
      >
        <span>
          settings.almintegration.feature.status_reporting.title
        </span>
      </Tooltip>
      <AlertErrorIcon
        className="spacer-left"
      />
    </div>
    <div>
      <Tooltip
        overlay="settings.almintegration.feature.alm_repo_import.description"
      >
        <span>
          settings.almintegration.feature.alm_repo_import.title
        </span>
      </Tooltip>
      <AlertErrorIcon
        className="spacer-left"
      />
    </div>
  </div>
  <div
    className="width-50"
  >
    <Alert
      variant="error"
    >
      Oops, something went wrong
    </Alert>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[Function]}
  >
    settings.almintegration.check_configuration
  </Button>
</div>
`;

exports[`should render correctly: success 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      key
    </h3>
    <span>
      http://github.enterprise.com
    </span>
  </div>
  <div
    className="display-flex-row spacer-bottom"
  >
    <div
      className="huge-spacer-right"
    >
      <Tooltip
        overlay="settings.almintegration.feature.status_reporting.description_pr_and_commits"
      >
        <span>
          settings.almintegration.feature.status_reporting.title
        </span>
      </Tooltip>
      <AlertSuccessIcon
        className="spacer-left"
      />
    </div>
    <div>
      <Tooltip
        overlay="settings.almintegration.feature.alm_repo_import.description"
      >
        <span>
          settings.almintegration.feature.alm_repo_import.title
        </span>
      </Tooltip>
      <AlertSuccessIcon
        className="spacer-left"
      />
    </div>
  </div>
  <div
    className="width-50"
  />
  <Button
    className="big-spacer-top"
    onClick={[Function]}
  >
    settings.almintegration.check_configuration
  </Button>
</div>
`;

exports[`should render correctly: success for Bitbucket Cloud 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      key
    </h3>
  </div>
  <div
    className="display-flex-row spacer-bottom"
  >
    <div
      className="huge-spacer-right"
    >
      <Tooltip
        overlay="settings.almintegration.feature.status_reporting.description_pr"
      >
        <span>
          settings.almintegration.feature.status_reporting.title
        </span>
      </Tooltip>
      <AlertSuccessIcon
        className="spacer-left"
      />
    </div>
    <div>
      <Tooltip
        overlay="settings.almintegration.feature.alm_repo_import.description"
      >
        <span>
          settings.almintegration.feature.alm_repo_import.title
        </span>
      </Tooltip>
      <AlertSuccessIcon
        className="spacer-left"
      />
    </div>
  </div>
  <div
    className="width-50"
  />
  <Button
    className="big-spacer-top"
    onClick={[Function]}
  >
    settings.almintegration.check_configuration
  </Button>
</div>
`;

exports[`should render correctly: success for GitLab 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      foo
    </h3>
  </div>
  <div
    className="display-flex-row spacer-bottom"
  >
    <div
      className="huge-spacer-right"
    >
      <Tooltip
        overlay="settings.almintegration.feature.status_reporting.description_mr"
      >
        <span>
          settings.almintegration.feature.status_reporting.title
        </span>
      </Tooltip>
      <AlertSuccessIcon
        className="spacer-left"
      />
    </div>
    <div>
      <Tooltip
        overlay="settings.almintegration.feature.alm_repo_import.description"
      >
        <span>
          settings.almintegration.feature.alm_repo_import.title
        </span>
      </Tooltip>
      <div
        className="display-inline-flex-center"
      >
        <strong
          className="spacer-left"
        >
          settings.almintegration.feature.alm_repo_import.disabled
        </strong>
        <HelpTooltip
          className="little-spacer-left"
          overlay="settings.almintegration.feature.alm_repo_import.disabled.no_url"
        />
      </div>
    </div>
  </div>
  <div
    className="width-50"
  />
  <Button
    className="big-spacer-top"
    onClick={[Function]}
  >
    settings.almintegration.check_configuration
  </Button>
</div>
`;

exports[`should render correctly: success with alert 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      key
    </h3>
    <span>
      http://github.enterprise.com
    </span>
  </div>
  <div
    className="display-flex-row spacer-bottom"
  >
    <div
      className="huge-spacer-right"
    >
      <Tooltip
        overlay="settings.almintegration.feature.status_reporting.description_pr_and_commits"
      >
        <span>
          settings.almintegration.feature.status_reporting.title
        </span>
      </Tooltip>
      <AlertSuccessIcon
        className="spacer-left"
      />
    </div>
    <div>
      <Tooltip
        overlay="settings.almintegration.feature.alm_repo_import.description"
      >
        <span>
          settings.almintegration.feature.alm_repo_import.title
        </span>
      </Tooltip>
      <AlertSuccessIcon
        className="spacer-left"
      />
    </div>
  </div>
  <div
    className="width-50"
  >
    <Alert
      variant="success"
    >
      settings.almintegration.configuration_valid
    </Alert>
    <Alert
      variant="warning"
    >
      <FormattedMessage
        defaultMessage="settings.almintegration.github.additional_permission"
        id="settings.almintegration.github.additional_permission"
        values={
          {
            "link": <withAppStateContext(DocLink)
              to="/devops-platform-integration/github-integration/"
            >
              learn_more
            </withAppStateContext(DocLink)>,
          }
        }
      />
    </Alert>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[Function]}
  >
    settings.almintegration.check_configuration
  </Button>
</div>
`;

exports[`should render correctly: success with branches disabled 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      key
    </h3>
    <span>
      http://github.enterprise.com
    </span>
  </div>
  <div
    className="display-flex-row spacer-bottom"
  >
    <div
      className="huge-spacer-right"
    >
      <Tooltip
        overlay="settings.almintegration.feature.status_reporting.description_pr_and_commits"
      >
        <span>
          settings.almintegration.feature.status_reporting.title
        </span>
      </Tooltip>
      <div
        className="display-inline-flex-center"
      >
        <strong
          className="spacer-left"
        >
          settings.almintegration.feature.pr_decoration.disabled
        </strong>
        <HelpTooltip
          className="little-spacer-left"
          overlay={
            <FormattedMessage
              defaultMessage="settings.almintegration.feature.pr_decoration.disabled.no_branches"
              id="settings.almintegration.feature.pr_decoration.disabled.no_branches"
              values={
                {
                  "link": <a
                    href="https://www.sonarsource.com/plans-and-pricing/developer/?sourceEdition=community"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    settings.almintegration.feature.pr_decoration.disabled.no_branches.link
                  </a>,
                }
              }
            />
          }
        />
      </div>
    </div>
    <div>
      <Tooltip
        overlay="settings.almintegration.feature.alm_repo_import.description"
      >
        <span>
          settings.almintegration.feature.alm_repo_import.title
        </span>
      </Tooltip>
      <AlertSuccessIcon
        className="spacer-left"
      />
    </div>
  </div>
  <div
    className="width-50"
  >
    <Alert
      variant="success"
    >
      settings.almintegration.configuration_valid
    </Alert>
    <Alert
      variant="warning"
    >
      <FormattedMessage
        defaultMessage="settings.almintegration.github.additional_permission"
        id="settings.almintegration.github.additional_permission"
        values={
          {
            "link": <withAppStateContext(DocLink)
              to="/devops-platform-integration/github-integration/"
            >
              learn_more
            </withAppStateContext(DocLink)>,
          }
        }
      />
    </Alert>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[Function]}
  >
    settings.almintegration.check_configuration
  </Button>
</div>
`;

exports[`should render correctly: warning 1`] = `
<div
  className="boxed-group-inner bordered spacer-top spacer-bottom it__alm-binding-definition"
>
  <div
    className="actions pull-right"
  >
    <Button
      onClick={[Function]}
    >
      <EditIcon
        className="spacer-right"
      />
      edit
    </Button>
    <Button
      className="button-red spacer-left"
      onClick={[Function]}
    >
      <DeleteIcon
        className="spacer-right"
      />
      delete
    </Button>
  </div>
  <div
    className="big-spacer-bottom"
  >
    <h3>
      key
    </h3>
    <span>
      http://github.enterprise.com
    </span>
  </div>
  <div
    className="width-50"
  >
    <Alert
      variant="warning"
    >
      settings.almintegration.could_not_validate
    </Alert>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[Function]}
  >
    settings.almintegration.check_configuration
  </Button>
</div>
`;
